GRX-296 Bugfix [Add User Info] Fix avatar jumping

--- a/src/pages/AddUserInfoPage/children/AddUserInfoForm/styles.module.scss
+++ b/src/pages/AddUserInfoPage/children/AddUserInfoForm/styles.module.scss
@@ -1,8 +1,9 @@
 @use 'src/styles/variables';
 
 .upload {
-  display: flex;
-  justify-content: center;
+  width: 120px;
+  height: 120px;
+  margin: 0 auto;
 
   :global(.ant-upload-select) {
     width: 120px !important;
@@ -10,6 +11,11 @@
   }
 
   :global(.ant-upload-list-item-container) {
+    position: absolute;
+    top: 60px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
     width: 120px !important;
     height: 120px !important;
   }
